2004-02-22  Andras Varga

	* added fsutils.cc/h

2004-02-10  Andras Varga

	* omnetapp.cc: error messages to display module class name (NED type)
	of current module
		
2004-02-09  Andras Varga

	* omnetapp.cc/h: preload-ned-files= omnetpp.ini option now supports
	list files (@nedfiles.lst), even recursive ones (list files may refer
	to other list files). Relative or absolute file name paths are also
	allowed in list files; relative paths are relative from the location
	of the list file.
FIXME still globbing needs to be added. maybe create a FileNameGlobber util class?
2004-02-04  ------ omnetpp-3.0pre1 released ------

2004-01-09  Andras Varga

	* cenvir.cc, omnetapp.h: added bubble()

2004-01-06  Andras Varga

	* cenvir.cc, omnetapp.h: added isGUI()

2004-01-01  Andras Varga

	* omnetapp.cc/h, cenvir.cc: handle new cEnvir notifications: 
	moduleCreated(), moduleDeleted(), connectionCreated(), 
	connectionRemoved(), displayStringChanged(cGate*), 
	displayStringChanged(cModule*),	displayStringAsParentChanged()

2003-12-11  Andras Varga

	* all files: follow changes in sim/; C-style casts replaced with 
	static_cast<>

2003-11-13  Andras Varga

	* Checked in parallel simulation code that was developed March-May 2003,
	during my stay at Monash University. Changes:

	2003-05-12  Andras Varga
	* speedmtr.cc: changed so that if measurement interval (clocks) or
	number of events are small, it refuses to give results (ie. returns
	all zeroes). I had some weird readings other before that...

	2003-04-18  Andras Varga
	* omnetapp.cc: fname-append-host setting now also appends pid (process
	id) to the file names

	2003-03-31  Andras Varga
	* omnetapp.cc/h: parallel simulation ini file options changed.
	New options, with their default values:
          [General]
          scheduler-class="cSequentialScheduler" (only used when par-sim=false)
          parallel-simulation=false
          parsim-communications-class="cFileCommunications"