@@ -1,6 +1,10 @@
+2004-02-23  Andras Varga
+
+	* omnetpp.cc/h, cenvir.cc: added moduleReparented() cEnvir method
+
 2004-02-22  Andras Varga
 
-	* added fsutils.cc/h
+	* added fsutils.cc/h; implemented wildcards in list files 
 
 2004-02-10  Andras Varga
 
@@ -14,7 +18,7 @@
 	to other list files). Relative or absolute file name paths are also
 	allowed in list files; relative paths are relative from the location
 	of the list file.
-FIXME still globbing needs to be added. maybe create a FileNameGlobber util class?
+
 2004-02-04  ------ omnetpp-3.0pre1 released ------
 
 2004-01-09  Andras Varga
